[project]
name = "comfyui_zenid"
description = ""
version = "1.0.0"
license = {file = "LICENSE"}

[project.urls]
Repository = "https://github.com/vuongminh1907/ComfyUI_ZenID"
#  Used by Comfy Registry https://comfyregistry.org

[tool.comfy]
PublisherId = "vuongminh1907"
DisplayName = "ComfyUI_ZenID"
Icon = ""
